--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,65 +1,84 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xmlns="http://java.sun.com/xml/ns/javaee"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-	version="2.5">
-	<display-name>DormitoryManage</display-name>
-	<servlet>
-		<description>系统登录处理器</description>
-		<display-name>LoginController</display-name>
-		<servlet-name>LoginController</servlet-name>
-		<servlet-class>me.codegc.manage.controller.LoginController</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>LoginController</servlet-name>
-		<url-pattern>/login</url-pattern>
-		<url-pattern>/index.html</url-pattern>
-	</servlet-mapping>
-	<servlet>
-		<description>没有配置servlet处理的请求全部到这里处理</description>
-		<display-name>ErrorController</display-name>
-		<servlet-name>ErrorController</servlet-name>
-		<servlet-class>me.codegc.manage.controller.ErrorController</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>ErrorController</servlet-name>
-		<url-pattern>/ErrorHandler</url-pattern>
-	</servlet-mapping>
-	<error-page>
-		<error-code>404</error-code>
-		<location>/ErrorHandler</location>
-	</error-page>
-	<error-page>
-		<error-code>403</error-code>
-		<location>/ErrorHandler</location>
-	</error-page>
-	<error-page>
-		<error-code>500</error-code>
-		<location>/ErrorHandler</location>
-	</error-page>
-
-	<!-- 精确到异常类型的处理方式 -->
-	<!-- <error-page> <exception-type> javax.servlet.ServletException </exception-type> 
-		<location>/ErrorHandler</location> </error-page> <error-page> <exception-type>java.io.IOException</exception-type> 
-		<location>/ErrorHandler</location> </error-page> <error-page> <exception-type>java.lang.NullPointerException</exception-type> 
-		<location>/ErrorHandler</location> </error-page> -->
-	<servlet>
-		<description></description>
-		<display-name>TestError</display-name>
-		<servlet-name>TestError</servlet-name>
-		<servlet-class>me.codegc.manage.controller.TestError</servlet-class>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>TestError</servlet-name>
-		<url-pattern>/TestError</url-pattern>
-	</servlet-mapping>
-	<servlet>
-		<servlet-name>log4j-init</servlet-name>
-		<servlet-class>me.codegc.manage.utils.Log4jUtil</servlet-class>
-		<init-param>
-			<param-name>log4j-properties-location</param-name>
-			<param-value>WEB-INF/classes/log4j.properties</param-value>
-		</init-param>
-		<load-on-startup>1</load-on-startup>
-	</servlet>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
+  <display-name>DormitoryManage</display-name>
+  <servlet>
+    <description>系统登录处理器</description>
+    <display-name>LoginController</display-name>
+    <servlet-name>LoginController</servlet-name>
+    <servlet-class>me.codegc.manage.controller.LoginController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>LoginController</servlet-name>
+    <url-pattern>/login</url-pattern>
+    <url-pattern>/index.html</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description>验证码处理器</description>
+    <servlet-name>EasyCaptcha</servlet-name>
+    <servlet-class>me.codegc.manage.controller.CaptchaController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>EasyCaptcha</servlet-name>
+    <url-pattern>/get/captcha</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description>没有配置servlet处理的请求全部到这里处理</description>
+    <display-name>ErrorController</display-name>
+    <servlet-name>ErrorController</servlet-name>
+    <servlet-class>me.codegc.manage.controller.ErrorController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ErrorController</servlet-name>
+    <url-pattern>/ErrorHandler</url-pattern>
+  </servlet-mapping>
+  <error-page>
+    <error-code>404</error-code>
+    <location>/ErrorHandler</location>
+  </error-page>
+  <error-page>
+    <error-code>403</error-code>
+    <location>/ErrorHandler</location>
+  </error-page>
+  <error-page>
+    <error-code>500</error-code>
+    <location>/ErrorHandler</location>
+  </error-page>
+  <servlet>
+    <description></description>
+    <display-name>TestError</display-name>
+    <servlet-name>TestError</servlet-name>
+    <servlet-class>me.codegc.manage.controller.TestError</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>TestError</servlet-name>
+    <url-pattern>/TestError</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>log4j-init</servlet-name>
+    <servlet-class>me.codegc.manage.utils.Log4jUtil</servlet-class>
+    <init-param>
+      <param-name>log4j-properties-location</param-name>
+      <param-value>WEB-INF/classes/log4j.properties</param-value>
+    </init-param>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
+  <filter>
+    <display-name>LoginFilter</display-name>
+    <filter-name>LoginFilter</filter-name>
+    <filter-class>com.codegc.manage.filters.LoginFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>LoginFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+  <servlet>
+    <description>系统核心控制器</description>
+    <display-name>SystemMainController</display-name>
+    <servlet-name>SystemMainController</servlet-name>
+    <servlet-class>me.codegc.manage.controller.SystemMainController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>SystemMainController</servlet-name>
+    <url-pattern>/system</url-pattern>
+  </servlet-mapping>
 </web-app>
